--- a/todo
+++ b/todo
@@ -1,19 +1,19 @@
-- readme file (how to get started with opam...., which versions of coq/iris I am using...)
-- update laatste coq iris, specifieke versies in readme
-- zie dat het compileert
-
 - eerste heflt
   + (bijna)nodige refactorings (backtranslation als value...)
-  + alle admits klaar hebben voor eerste helft
+    * embed, extract, F als values definieren
+  + alle niet-triviale admits klaar hebben voor eerste helft
+  + adequacy voor uiteindelijk lemma
 
 - bewijs equivalentie consistencies
   + higher-order stuff
   + fill in...
+  + completely formalize unary case to see if no suprises
 
 - eerste helft opschonen
+  1) tactic voor pure steps (links en rechts)
+    - saaie lemma's bewijzen
   + verwijder onnodige/duplicate definites
   + voorspelbare namen...
   + werken met scopes voor tussen twee talen
-  + tactic voor pure steps
 
 - tweede helft
